# tg-app

./: .dockerignore  .eslintignore  .eslintrc.yml  .gitignore  .pnp.cjs  .prettierignore  .prettierrc.yml  .yarnrc.yml  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.eslint.json  tsconfig.json
.github/workflows/: client-package.yml  docker-image.yml  react-package.yml  schema-package.yml  types-package.yml
examples/react/: index.html  package.json  tsconfig.json  vite.config.ts
examples/react/src/: App.module.css  App.tsx  main.tsx
examples/react/src/shared/ui/: index.ts
examples/react/src/shared/ui/card/: card.tsx  styles.ts
examples/react/src/shared/ui/checkbox/: checkbox.tsx  styles.ts
examples/react/src/shared/ui/input/: input.tsx  styles.ts
examples/react/src/widgets/back-button-demo/: back-button-demo.tsx  index.ts
examples/react/src/widgets/init-data-validate-demo/: index.ts  init-data-validate-demo.tsx
examples/react/src/widgets/main-button-demo/: index.ts  main-button-demo.tsx
examples/react/src/widgets/settings-button-demo/: index.ts  settings-button-demo.tsx
