[workspace]
members = ["packages/service"]
resolver = "2"
description = "REST and GraphQL server for validating data received via the Telegram Mini App"
publish = false
license = "MIT"
license-file = "LICENSE.md"
repository = "https://github.com/bigslycat/tg-app"
authors = ["Pavel Tereschenko <me@stupidcat.wtf>"]
